fixed 'form to the right' on mobile

--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -146,6 +146,10 @@
     //Animations
     transition: all 0.3s;
 
+    &-below {
+      display: none;
+    }
+
     &:hover {
       //Color Styling
       background-color: rgba(255, 255, 255, 0.9);
@@ -192,6 +196,13 @@
       //Spacing
       padding: 2rem;
       margin-bottom: 4rem;
+
+      &-right {
+        display: none;
+      }
+      &-below {
+        display: inline;
+      }
     }
   }
 
